--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "shadow-cljs": "2.8.83"
+    "shadow-cljs": "2.9.10"
   },
   "dependencies": {
     "dexie": "^2.0.4",
     "react": "16.9.0",
-    "react-dom": "16.9.0"
+    "react-dom": "16.9.0",
+    "webextension-polyfill": "^0.6.0"
   }
 }
