--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dexie": "^3.0.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-shadow-dom-retarget-events": "^1.0.11",
     "webextension-polyfill": "^0.6.0"
   }
 }
