--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ampie",
-  "version": "1.0.0",
+  "version": "2.2.1",
   "private": true,
   "devDependencies": {
     "shadow-cljs": "2.9.10"
   },
   "dependencies": {
-    "dexie": "^3.0.1",
+    "dexie": "^3.0.2",
+    "jsonparse": "^1.3.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-shadow-dom-retarget-events": "^1.0.11",
