--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-shadow-dom-retarget-events": "^1.0.11",
+    "runes": "^0.4.3",
     "webextension-polyfill": "^0.6.0"
   }
 }
