Replace alt-shiftx2 with alt-alt

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ public/js
 /target
 /checkouts
 /build/out
+build.zip
+source.zip
+/build/assets/tailwind.css
 
 pom.xml
 pom.xml.asc
@@ -11,6 +14,7 @@ pom.xml.asc
 *.jar
 *.log
 .shadow-cljs/
+.clj-kondo/
 .idea/
 .lein-*
 .nrepl-*
